--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -1,1 +1,5 @@
 set -g default-terminal "screen-256color"
+set -g mouse on
+bind c new-window -c '#{pane_current_path}'
+bind '"' split-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
