--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -1,5 +1,7 @@
 set -g default-terminal "screen-256color"
 set -g mouse on
+#setw -g mode-keys vi
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 bind c new-window -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
