--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -6,3 +6,5 @@ set -g mouse on
 bind c new-window -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
+# without this neovim/lunarvim esc followed by j/k will swap lines
+set -sg escape-time 5
