--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -1,17 +1,20 @@
+# status bar on top
+# set-option -g status-position top
 set -g default-command $SHELL
 set -g default-terminal "screen-256color"
 set -g mouse on
-#setw -g mode-keys vi
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+#setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 bind c new-window -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
+bind m resize-pane -Z
+
 # without this neovim/lunarvim esc followed by j/k will swap lines
 set -sg escape-time 5
 
